--- a/Pipfile
+++ b/Pipfile
@@ -3,8 +3,12 @@ name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
 
+[dev-packages]
+pytest = "==6.2.1"
+
 [packages]
-pandas = "==1.2.1"
+dask = {extras = ["dataframe"],version = "==2.11.0"}
+pyarrow = "==3.0.0"
 
 [requires]
 python_version = "3.7"
